Sync before RDFS code split out